--- a/app/views/chatbot_messages/index.html.erb
+++ b/app/views/chatbot_messages/index.html.erb
@@ -1,26 +1,11 @@
 <h1>Versa Chatbot</h1>
 <input placeholder = "Please enter query..." id="chatbot-input">
-<button onclick="const data = { query: document.getElementById('chatbot-input').value, authenticity_token: document.getElementsByName('csrf-token')[0].content };
+<button id="search-button">Search</button>
+<div class = "response-list-container" ><div class="response-list">
+</div></div>
+<%= stylesheet_link_tag "chatbot" %>
+<%= javascript_pack_tag 'chatbot_index' %>
 
-fetch('/api/v1', {
-  method: 'POST',
-  headers: {
-    'Content-Type': 'application/json',
-  },
-  body: JSON.stringify(data),
-})
-.then(response => response.json())
-.then(data => {
-    document.getElementsByClassName('response-list')[0].appendChild((document.createElement('div')).appendChild(document.createTextNode(`${data.response}\n`)))
-  console.log('Success:', data);
-})
-.catch((error) => {
-  console.error('Error:', error);
-});
-">Search</button>
-<div class="response-list">
-
-</div>
 
 
 
