--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
   </head>
 
   <body>
+    <%= render "layouts/navbar"%>
     <%= yield %>
+    <%= render "layouts/chatbot"%>
   </body>
 </html>
