added turbolinks:load prompts

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -18,7 +18,7 @@
     width: 70px;
     border-radius: 50px;
     border-width: 0px;
-    background-image: url("https://www.flaticon.com/svg/vstatic/svg/1057/1057225.svg?token=exp=1613809766~hmac=f2b578230eed8ce042c56f26eb7e0a27");
+    background-image: url("https://image.flaticon.com/icons/svg/1057/1057225.svg");
 }
 .openChat {
     --msger-bg: #fff;
