--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -1,7 +1,7 @@
 .nav-container {
   background-color: #015a9e;
-  width: fit-content;
-  margin: 10px 0;
+  width: 100%;
+  margin: 20px 0;
   padding: 10px;
 }
 a {
