--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class = "nav-container">
-    <%= link_to "Dashboard", "dashboard", :class=>"nav-link"%>
-    <%= link_to "Reports", "reports", :class=>"nav-link" %>
+    <%= link_to "Dashboard", dashboard_path, :class=>"nav-link"%>
+    <%= link_to "Reports", reports_path, :class=>"nav-link" %>
     <%= link_to "Chatbot Home", "/", :class=>"nav-link" %>
 </div>
 
