--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,18 @@
   </head>
 
   <body>
+    <% if current_user %>
+    Logged in as <%= current_user.email %>.
+    <%= link_to "Log Out", logout_path %>
+    <% else %>
+    <%= link_to "Sign Up", signup_path %> or 
+    <%= link_to "Log In", login_path %>
+    <% end %>
+    <p id=”notice”><%= notice %></p>
     <%= render "layouts/navbar"%>
     <%= yield %>
+    <% if current_user && current_user.show_chatbot%>
     <%= render "layouts/chatbot"%>
+    <% end%>
   </body>
 </html>
