changed the response API, and added a new get route for chatbot history

--- a/app/views/layouts/_chatbot.html.erb
+++ b/app/views/layouts/_chatbot.html.erb
@@ -2,6 +2,10 @@
     
 </button>
 
+<div class="prompt-container">
+    Prompt Text
+</div>
+
 <div class="openChat">
     <section class="msger">
         <header class="msger-header">
