--- a/app/views/layouts/_chatbot.html.erb
+++ b/app/views/layouts/_chatbot.html.erb
@@ -1,3 +1,5 @@
+<%= include_gon %>
+
 <button class="openChatBtn" >
     
 </button>
@@ -50,3 +52,4 @@
 <%= stylesheet_link_tag 'style' %>
 <%= stylesheet_link_tag "chatbot" %>
 <%= javascript_pack_tag 'chatbot_index' %>
+<%= javascript_pack_tag 'chat_history' %>
