--- a/app/views/layouts/_chatbot.html.erb
+++ b/app/views/layouts/_chatbot.html.erb
@@ -53,3 +53,4 @@
 <%= stylesheet_link_tag "chatbot" %>
 <%= javascript_pack_tag 'chatbot_index' %>
 <%= javascript_pack_tag 'chat_history' %>
+<%= javascript_pack_tag 'turbolink'%>
