--- a/app/views/layouts/_chatbot.html.erb
+++ b/app/views/layouts/_chatbot.html.erb
@@ -4,8 +4,8 @@
     
 </button>
 
-<div class="prompt-container">
-     
+<div id='wrapper' class="prompt-container" style='display:none'>
+    
 </div>
 
 <div class="openChat">
