--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -8,8 +8,9 @@
   height: fit-content;
   width: 300px;
   border: 2px solid #ddd;
-  color: #666;
+  color: rgb(0, 0, 0);
   padding: 5px;
+  background-color: #bdbdbd;
 }
 .openChatBtn {
   display: block;
