--- a/app/views/layouts/_chatbot.html.erb
+++ b/app/views/layouts/_chatbot.html.erb
@@ -1,5 +1,3 @@
-<%= include_gon %>
-
 <button class="openChatBtn" >
     
 </button>
@@ -51,6 +49,5 @@
 
 <%= stylesheet_link_tag 'style' %>
 <%= stylesheet_link_tag "chatbot" %>
-<%= javascript_pack_tag 'chatbot_index' %>
-<%= javascript_pack_tag 'chat_history' %>
-<%= javascript_pack_tag 'turbolink'%>
+<%= javascript_pack_tag 'chatbot' %>
+<%= javascript_pack_tag 'prompts'%>
