--- a/app/views/layouts/_chatbot.html.erb
+++ b/app/views/layouts/_chatbot.html.erb
@@ -42,7 +42,9 @@
         </form>
     </section>
 </div>
-<button class="closeChatBtn" onclick="closeForm()">
+<button class="closeChatBtn" 
+<%# onclick="closeForm()" %>
+>
     
 </button>
 
